// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox In Color Context 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <ds-field data-clickdelegatefor="checkbox-in-color-context">
    <input
      id="checkbox-in-color-context"
      type="checkbox"
      checked
      aria-describedby="<generated>"
    >
    <label
      data-weight="regular"
      for="checkbox-in-color-context"
    >
      Checkbox label
    </label>
    <div
      data-field="description"
      id="<generated>"
    >
      Description
    </div>
  </ds-field>
</div>
`;

exports[`Focused 1`] = `
<ds-field data-clickdelegatefor="checkbox-preview">
  <input
    id="checkbox-preview"
    type="checkbox"
    value="value"
    aria-describedby="<generated>"
  >
  <label
    data-weight="regular"
    for="checkbox-preview"
  >
    Checkbox label
  </label>
  <div
    data-field="description"
    id="<generated>"
  >
    Description
  </div>
</ds-field>
`;

exports[`One Option 1`] = `
<fieldset aria-labelledby="<generated> <generated>">
  <legend id="<generated>">
    Bekreft at du er over 18 år
  </legend>
  <p id="<generated>">
    For at vi skal kunne sende deg opplysningen du ber om, må du bekrefte at du er myndig.
  </p>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="checkbox"
      value="samtykke"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Jeg bekrefter at jeg er over 18 år
    </label>
  </ds-field>
</fieldset>
`;

exports[`Outline 1`] = `
<ds-field
  data-variant="outline"
  data-clickdelegatefor="checkbox-preview"
>
  <input
    id="checkbox-preview"
    type="checkbox"
    aria-describedby="<generated>"
  >
  <label
    data-weight="regular"
    for="checkbox-preview"
  >
    Checkbox label
  </label>
  <div
    data-field="description"
    id="<generated>"
  >
    Description
  </div>
</ds-field>
`;

exports[`Preview 1`] = `
<ds-field data-clickdelegatefor="checkbox-preview">
  <input
    id="checkbox-preview"
    type="checkbox"
    aria-describedby="<generated>"
  >
  <label
    data-weight="regular"
    for="checkbox-preview"
  >
    Checkbox label
  </label>
  <div
    data-field="description"
    id="<generated>"
  >
    Description
  </div>
</ds-field>
`;
